# onnx-tutorial

./: .pre-commit-config.yaml  README.md  pyproject.toml
onnx_models/: my_image_classifier.onnx
onnx_tutorial/: execute_with_ort.py  export_to_onnx.py  model.py  my_image_classifier.onnx
onnx_tutorial/onnx_pytorch/: execute_with_ort.py  export_to_onnx.py
